[KARAF-4835] Use URI in shell:source to get completion